# composable-runtime

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.devin/workflows/: evolution-v2-design.md
.evolution/: genomes.json
.github/workflows/: ci.yml
Evolution-Dashboard/: package-lock.json  package.json
Evolution-Dashboard/src/main/: index.ts
Evolution-Dashboard/src/preload/: index.ts
Evolution-Dashboard/src/renderer/src/: App.tsx
Evolution-Dashboard/src/renderer/src/components/: PresetModal.tsx
Evolution-Dashboard/src/renderer/src/lib/: presets.ts
Evolution-Dashboard/src/renderer/src/pages/: auto-evolve.tsx  settings.tsx  tasks.tsx
crates/capabilities/: Cargo.toml
crates/capabilities/src/: cmake_ops.rs  code.rs  compute.rs  fs.rs  greet.rs  http.rs  lib.rs  shell.rs  store.rs  web.rs
crates/runtime/: Cargo.toml
crates/runtime/assets/: pi-capability-runtime.ts
crates/runtime/src/: ab_test.rs  agent.rs  auto_evolve.rs  autonomous.rs  autonomy_controller.rs  capability.rs  capability_package.rs  cloud_sync.rs  daemon.rs  driver.rs  durable_run.rs  evolution.rs  experiments.rs  failure_driver.rs  genome.rs  genome_yaml.rs  http_api.rs  initiative.rs  integrations.rs  learning_agenda.rs  lib.rs  llm_health.rs  mcp_server.rs  memory.rs  message.rs  message_bus.rs  meta_evolve.rs  orchestrator.rs  platform.rs  project_worker.rs  registry.rs  research.rs  sandbox.rs  task_orchestrator.rs  validator.rs  value_energy.rs  workflow.rs  workspace.rs
crates/runtime/tests/: evolution_e2e.rs  integration.rs
examples/: compute_pipeline.yaml  conditional_workflow.yaml  greet_and_store.yaml  parallel_workflow.yaml  retry_and_error.yaml
wit/: capabilities.wit
