[package]
name = "capabilities"
version.workspace = true
edition.workspace = true

[dependencies]
runtime = { path = "../runtime" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest = { workspace = true }
base64 = "0.22"
uuid = { workspace = true }
