[package]
name = "runtime"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
async-trait.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
futures.workspace = true
regex = "1"
libloading = "0.8"
axum.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
capabilities = { path = "../capabilities" }
tempfile = "3"
